	when notifying the observers when a folder was added just under an
	account

2007-06-07  Philip Van Hoof  <pvanhoof@gnome.org>

	* Merged camel-lite with upstream Camel revision 7777
	* Various connection cancellation problems fixed in the IMAP code
	* Fix for trac ticket #64
	* Fix for sergio, when removing folders the CamelFolderInfo iter was
	still cached
	
2007-06-06  Philip Van Hoof  <pvanhoof@gnome.org>

	* Fixed the OpenSSL support, although I'm leaving the warnings in
	place as the support for OpenSSL has not had as much testing as the
	Mozilla/NSS SSL implementations
	* Added the option --with-ssl=nss,openssl,none to the build to assist
	the SSL library availability detection
	* Changed the use_ssl options to "wrapped", "tls", "when-possible" and
	"never" for both POP3 and IMAP
	* Some connection fixes in the IMAP and POP3 connection procedures
	* Fixed the configure.ac of camel-lite, it had a small OpenSSL vs. NSS
	mixup

2007-06-05  Philip Van Hoof  <pvanhoof@gnome.org>

	* Bugfix for LOGINDISABLED on IMAP
	* Bugfix when connecting (connection status problem)
	* Added the tny_store_account_delete_cache API

	* This was a major API change

2007-06-03  Johannes Schmid  <johannes.schmid@openismus.com>

	* libtinymail-camel/tny-camel-account.c:
	tny_camel_account_get_supported_secure_authentication_async_thread
	Fixed implementation to get the secure authentication support
	methods and simplied them a lot.

2007-06-03  Philip Van Hoof  <pvanhoof@gnome.org>

	* Support for removing messages from a POP server after retrieval
	* Support for tny_header_get_uid on TnyMsg's header instance
	* Removed the warning in libtinymail/tny-folder.c: please use the
	support for DBC in stead. It's specifically designed for this. Read
	the documentation in building.txt to find out how to enable it.

	* This was a major API change

2007-06-01  Murray Cumming  <murrayc@murrayc.com>

	* libtinymail-camel/tny-camel-folder.c: